Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,10 +1,1 @@
-{
-  "meta": {
-    "username": "sebbrousse",
-    "repositoryName": "sebbrousse.github.io",
-    "branch": "master"
-  },
-  "theme": {
-    "name": "Casper"
-  }
-}
+{"meta":{"username":"sebbrousse","repositoryName":"sebbrousse.github.io","branch":"master"},"site":{"url":"https://sebbrousse.github.io"},"socialnetwork":{},"theme":{"name":"Roon","url":"//sebbrousse.github.io/themes/Roon"}}
