--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,1 +1,1 @@
-{"meta":{"username":"sebbrousse","repositoryName":"sebbrousse.github.io","branch":"master"},"site":{"url":"https://sebbrousse.github.io"},"socialnetwork":{},"theme":{"name":"ichi","url":"//sebbrousse.github.io/themes/ichi"}}
+{"meta":{"username":"sebbrousse","repositoryName":"sebbrousse.github.io","branch":"master"},"site":{"url":"https://sebbrousse.github.io"},"socialnetwork":{},"theme":{"name":"Saga","url":"//sebbrousse.github.io/themes/Saga"}}
