--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,1 +1,31 @@
-{"meta":{"username":"sebbrousse","repositoryName":"sebbrousse.github.io","branch":"master"},"site":{"url":"https://sebbrousse.github.io"},"socialnetwork":{},"theme":{"name":"uno","url":"//sebbrousse.github.io/themes/uno"}}
+{
+  "meta": {
+    "username": "sebbrousse",
+    "repositoryName": "sebbrousse.github.io",
+    "branch": "master"
+  },
+  "site": {
+    "url": "https://sebbrousse.github.io"
+  },
+  "socialnetwork": {},
+  "theme": {
+    "name": "uno",
+    "url": "//sebbrousse.github.io/themes/uno"
+  },
+  "urls": {
+    "site": "https://sebbrousse.github.io",
+    "hubpress": "http://sebbrousse.github.io",
+    "theme": "//sebbrousse.github.io/themes/uno",
+    "images": "https://sebbrousse.github.io/images"
+  },
+  "initialisationConfigComponent": {
+    "name": "initialise-configuration",
+    "computed": {},
+    "methods": {},
+    "staticRenderFns": [
+      null,
+      null,
+      null
+    ]
+  }
+}
