--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -29,7 +29,7 @@
     "stackoverflow": ""
   },
   "theme": {
-    "name": "bob",
+    "name": "boo",
     "url": "//sebbrousse.github.io/themes/uno"
   },
   "urls": {
